Created main screen
Created cookbook_activity.xml, cookbook_fragment.xml, recipe_fragment_item_list.xml
Made connections from CookbookFragment.java and MyRecipeRecyclerViewAdapter.java

--- a/app/src/main/res/layout-v21/cookbook_fragment.xml
+++ b/app/src/main/res/layout-v21/cookbook_fragment.xml
@@ -83,6 +83,7 @@
         android:layout_marginBottom="@dimen/fab_margin"
         android:background="@drawable/fab_background"
         android:contentDescription="@string/search"
+        android:elevation="@dimen/fab_elevation"
         android:src="@drawable/ic_search_24px" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
