--- a/app/src/main/res/layout/step_fragment_item_list.xml
+++ b/app/src/main/res/layout/step_fragment_item_list.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.larsonapps.personalcookbook.ui.main.RecipeFragment"
+    android:name="com.larsonapps.personalcookbook.ui.main.StepFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.CookbookFragment"
-    tools:listitem="@layout/recipe_fragment_item" />
+    tools:context=".ui.StepFragment"
+    tools:listitem="@layout/step_fragment_item" />
