--- a/app/src/main/res/layout-v21/cookbook_details_fragment.xml
+++ b/app/src/main/res/layout-v21/cookbook_details_fragment.xml
@@ -20,6 +20,7 @@
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:elevation="@dimen/app_bar_elevation"
             android:fitsSystemWindows="true"
             android:minHeight="@dimen/details_minimum_app_bar_height"
             app:contentScrim="@color/colorPrimary"
@@ -39,11 +40,11 @@
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
-
+            
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
-
+    
     <androidx.core.widget.NestedScrollView
         android:id="@+id/content_nested"
         android:layout_width="match_parent"
@@ -60,24 +61,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:context="com.larsonapps.personalcookbook.CoobookDetailsContentFragment" />
-
+            
             <TextView
                 android:id="@+id/ingredient_label"
                 style="@style/DetailTextView"
+                android:text="@string/ingredients"
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
-
+            
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/ingredient_list_container"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/details_default_container_height"
                 tools:context="com.larsonapps.personalcookbook.IngredientFragment" />
-
+            
             <TextView
                 android:id="@+id/step_label"
                 style="@style/DetailTextView"
                 android:text="@string/steps"
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
-
+            
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/step_list_container"
                 android:layout_width="match_parent"
@@ -97,6 +99,7 @@
         android:layout_marginBottom="@dimen/fab_margin"
         android:background="@drawable/fab_background"
         android:contentDescription="@string/edit"
+        android:elevation="@dimen/fab_elevation"
         android:src="@drawable/ic_edit_24px" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
