--- a/app/src/main/res/layout/cookbook_details_content_fragment.xml
+++ b/app/src/main/res/layout/cookbook_details_content_fragment.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.CookbookDetailsContentFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/DetailTextView"
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
