--- a/app/src/main/res/layout/step_fragment_item_list.xml
+++ b/app/src/main/res/layout/step_fragment_item_list.xml
@@ -2,8 +2,8 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
-    android:name="com.larsonapps.personalcookbook.ui.main.StepFragment"
+    android:id="@+id/step_list"
+    android:name="com.larsonapps.personalcookbook.ui.StepFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
