--- a/app/src/main/res/layout/step_fragment_item.xml
+++ b/app/src/main/res/layout/step_fragment_item.xml
@@ -9,12 +9,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:textColor="@color/white"/>
+
+    <ImageButton
+        android:id="@+id/image_button"
+        android:layout_height="@dimen/edit_edit_icon_size"
+        android:layout_width="@dimen/edit_edit_icon_size"
+        android:background="@drawable/button_background"
+        android:layout_margin="@dimen/edit_delete_icon_margin"
+        android:padding="@dimen/edit_edit_icon_padding"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_edit_24px"/>
 </LinearLayout>
