completed coobook manual fragment
set all views, set delete and edit icons.

--- a/app/src/main/res/layout/content_fragment.xml
+++ b/app/src/main/res/layout/content_fragment.xml
@@ -5,8 +5,26 @@
     android:layout_height="match_parent"
     tools:context=".ui.ContentFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
     <TextView
+        android:id="@+id/edit_content_text_view"
+        android:layout_width="wrap_content"
         style="@style/DetailTextView"
         android:text="@string/hello_blank_fragment" />
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/description_image_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/edit_icon_padding"
+        android:layout_gravity="end"
+        android:layout_marginBottom="@dimen/edit_description_margin"
+        android:background="@drawable/button_selector"
+        android:src="@drawable/ic_edit_24px" />
+    </LinearLayout>
 
 </FrameLayout>
