--- a/app/src/main/res/layout/recipe_fragment_item_list.xml
+++ b/app/src/main/res/layout/recipe_fragment_item_list.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
     app:layoutManager="LinearLayoutManager"
     tools:context=".ui.CookbookFragment"
     tools:listitem="@layout/recipe_fragment_item" />
