--- a/app/src/main/res/drawable/button_selector.xml
+++ b/app/src/main/res/drawable/button_selector.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorAccent" android:state_pressed="true"/>
-    <item android:drawable="@color/colorAccent" android:state_activated="true"/>
-    <item android:drawable="@color/colorAccent" android:state_selected="true" />
+    <item android:drawable="@color/colorPrimaryDark" android:state_pressed="true"/>
+    <item android:drawable="@color/colorPrimaryDark" android:state_activated="true"/>
+    <item android:drawable="@color/colorPrimaryDark" android:state_selected="true" />
 
 
-    <item android:drawable="@color/colorPrimaryDark"/>
+    <item android:drawable="@drawable/button_background"/>
 
 </selector>
