--- a/app/src/main/res/layout/cookbook_edit_fragment.xml
+++ b/app/src/main/res/layout/cookbook_edit_fragment.xml
@@ -8,124 +8,143 @@
     tools:context=".ui.CookbookEditFragment">
 
     <EditText
-        android:id="@+id/recipe_name_edit_text"
+        android:id="@+id/edit_recipe_name_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textCapWords"
+        android:importantForAutofill="no"
+        android:hint="@string/enter_recipe_name_hint"
+        android:imeOptions="actionDone"
+        android:textColorHint="@color/white"
         android:layout_marginStart="@dimen/text_margin"
         android:text="@string/apple_pie"
+        style="@style/TextAppearance.MaterialComponents.Headline4"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/content_container"
+        android:id="@+id/edit_content_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/recipe_name_edit_text"
+        app:layout_constraintTop_toBottomOf="@id/edit_recipe_name_edit_text"
         app:layout_constraintStart_toStartOf="parent"
         tools:context="com.larsonapps.personalcookbook.CoobookDetailsContentFragment" />
 
     <TextView
-        android:id="@+id/ingredient_label"
-        style="@style/DetailTextView"
+        android:id="@+id/edit_ingredient_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
         android:text="@string/ingredients"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-        app:layout_constraintTop_toBottomOf="@id/content_container"
+        android:textColor="@color/white"
+        android:layout_marginStart="@dimen/text_margin"
+        app:layout_constraintTop_toBottomOf="@id/edit_content_container"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
-        android:id="@+id/reorder_ingredient_button"
+        android:id="@+id/edit_reorder_ingredient_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/reorder_ingredients_button_text"
-        android:background="@drawable/button_background"
+        android:paddingTop="@dimen/edit_vertical_button_padding"
+        android:paddingBottom="@dimen/edit_vertical_button_padding"
         android:paddingStart="@dimen/edit_button_padding"
         android:paddingEnd="@dimen/edit_button_padding"
-        app:layout_constraintTop_toBottomOf="@id/ingredient_label"
-        app:layout_constraintBottom_toTopOf="@id/ingredient_label"
+        android:layout_margin="@dimen/text_margin"
+        app:layout_constraintTop_toBottomOf="@id/edit_ingredient_label"
+        app:layout_constraintBottom_toTopOf="@id/edit_ingredient_label"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/ingredient_list_container"
+        android:id="@+id/edit_ingredient_list_container"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        app:layout_constraintTop_toBottomOf="@id/ingredient_label"
+        app:layout_constraintTop_toBottomOf="@id/edit_ingredient_label"
         tools:context="com.larsonapps.personalcookbook.IngredientFragment" />
 
     <Button
-        android:id="@+id/add_ingredient_button"
+        android:id="@+id/edit_add_ingredient_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_ingredient_button_text"
-        android:background="@drawable/button_background"
+        android:layout_margin="@dimen/text_margin"
         android:paddingStart="@dimen/edit_button_padding"
         android:paddingEnd="@dimen/edit_button_padding"
-        app:layout_constraintTop_toBottomOf="@id/ingredient_list_container"
+        app:layout_constraintTop_toBottomOf="@id/edit_ingredient_list_container"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/step_label"
-        style="@style/DetailTextView"
+        android:id="@+id/edit_step_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
         android:text="@string/steps"
+        android:textColor="@color/white"
+        android:layout_marginStart="@dimen/text_margin"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-        app:layout_constraintTop_toBottomOf="@id/add_ingredient_button"
+        app:layout_constraintTop_toBottomOf="@id/edit_add_ingredient_button"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
-        android:id="@+id/reorder_step_button"
+        android:id="@+id/edit_reorder_step_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/reorder_steps_button_text"
-        android:background="@drawable/button_background"
+        android:layout_margin="@dimen/text_margin"
         android:paddingStart="@dimen/edit_button_padding"
         android:paddingEnd="@dimen/edit_button_padding"
-        app:layout_constraintTop_toBottomOf="@id/step_label"
-        app:layout_constraintBottom_toTopOf="@id/step_label"
+        app:layout_constraintTop_toBottomOf="@id/edit_step_label"
+        app:layout_constraintBottom_toTopOf="@id/edit_step_label"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/step_list_container"
+        android:id="@+id/edit_step_list_container"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         tools:context="com.larsonapps.personalcookbook.StepFragment"
-        app:layout_constraintTop_toBottomOf="@id/step_label"
+        app:layout_constraintTop_toBottomOf="@id/edit_step_label"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/add_step_button"
+        android:id="@+id/edit_add_step_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_step_button_text"
-        android:background="@drawable/button_background"
+        android:layout_margin="@dimen/text_margin"
         android:paddingStart="@dimen/edit_button_padding"
         android:paddingEnd="@dimen/edit_button_padding"
-        app:layout_constraintTop_toBottomOf="@id/step_list_container"
+        app:layout_constraintTop_toBottomOf="@id/edit_step_list_container"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/image_label"
-        style="@style/DetailTextView"
+        android:id="@+id/edit_image_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
         android:text="@string/images"
+        android:textColor="@color/white"
+        android:layout_marginStart="@dimen/text_margin"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-        app:layout_constraintTop_toBottomOf="@id/add_step_button"
+        app:layout_constraintTop_toBottomOf="@id/edit_add_step_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/image_list_container"/>
+        app:layout_constraintBottom_toTopOf="@id/edit_image_list_container"/>
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/image_list_container"
+        android:id="@+id/edit_image_list_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:context="com.larsonapps.personalcookbook.ImageFragment"
-        app:layout_constraintTop_toBottomOf="@id/image_label"
+        app:layout_constraintTop_toBottomOf="@id/edit_image_label"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/add_image_button"/>
+        app:layout_constraintBottom_toTopOf="@id/edit_add_image_button"/>
 
     <Button
-        android:id="@+id/add_image_button"
+        android:id="@+id/edit_add_image_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_image_button_text"
-        android:background="@drawable/button_background"
+        android:layout_margin="@dimen/text_margin"
         android:paddingStart="@dimen/edit_button_padding"
         android:paddingEnd="@dimen/edit_button_padding"
         app:layout_constraintStart_toStartOf="parent"
