--- a/app/src/main/res/layout/cookbook_manual_fragment.xml
+++ b/app/src/main/res/layout/cookbook_manual_fragment.xml
@@ -1,14 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.CookbookManualFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/manual_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        app:title="New Recipe"
+        app:titleTextColor="@color/white"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/manual_recipe_name_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/text_margin"
+        android:hint="@string/enter_recipe_name_hint"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
+        android:inputType="textCapWords"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/manual_toolbar"
+        android:importantForAutofill="no" />
+
+    <EditText
+        android:id="@+id/manual_description_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textCapSentences"
+        android:layout_marginStart="@dimen/text_margin"
+        android:hint="@string/enter_recipe_description_hint"
+        style="@style/TextAppearance.MaterialComponents.Body1"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:importantForAutofill="no"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/manual_recipe_name_edit_text" />
+
+    <TextView
+        android:id="@+id/manual_ingredient_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
+        android:text="@string/ingredients"
+        android:textColor="@color/white"
+        android:layout_marginStart="@dimen/text_margin"
+        app:layout_constraintTop_toBottomOf="@id/manual_description_edit_text"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/manual_ingredient_list_container"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintTop_toBottomOf="@id/manual_ingredient_label"
+        tools:context="com.larsonapps.personalcookbook.IngredientFragment" />
+
+    <Button
+        android:id="@+id/manual_add_ingredient_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_ingredient_button_text"
+        android:layout_margin="@dimen/text_margin"
+        android:paddingStart="@dimen/edit_button_padding"
+        android:paddingEnd="@dimen/edit_button_padding"
+        app:layout_constraintTop_toBottomOf="@id/manual_ingredient_list_container"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/manual_step_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
+        android:text="@string/steps"
+        android:textColor="@color/white"
+        android:layout_marginStart="@dimen/text_margin"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+        app:layout_constraintTop_toBottomOf="@id/manual_add_ingredient_button"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/manual_step_list_container"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        tools:context="com.larsonapps.personalcookbook.StepFragment"
+        app:layout_constraintTop_toBottomOf="@id/manual_step_label"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/manual_add_step_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_step_button_text"
+        android:layout_margin="@dimen/text_margin"
+        android:paddingStart="@dimen/edit_button_padding"
+        android:paddingEnd="@dimen/edit_button_padding"
+        app:layout_constraintTop_toBottomOf="@id/manual_step_list_container"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/manual_image_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.MaterialComponents.Headline5"
+        android:text="@string/images"
+        android:textColor="@color/white"
+        android:layout_marginStart="@dimen/text_margin"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+        app:layout_constraintTop_toBottomOf="@id/manual_add_step_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/manual_image_list_container"/>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/manual_image_list_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:context="com.larsonapps.personalcookbook.ImageFragment"
+        app:layout_constraintTop_toBottomOf="@id/manual_image_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/manual_add_image_button"/>
+
+    <Button
+        android:id="@+id/manual_add_image_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_image_button_text"
+        android:layout_margin="@dimen/text_margin"
+        android:paddingStart="@dimen/edit_button_padding"
+        android:paddingEnd="@dimen/edit_button_padding"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
