--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,6 +29,9 @@
     <dimen name="edit_button_padding">8dp</dimen>
     <dimen name="edit_delete_icon_size">56dp</dimen>
     <dimen name="edit_delete_icon_margin">16dp</dimen>
-    <dimen name="edit_edit_icon_size">24dp</dimen>
-    <dimen name="edit_edit_icon_padding">4dp</dimen>
+    <dimen name="edit_icon_size">24dp</dimen>
+    <dimen name="edit_icon_padding">4dp</dimen>
+    <dimen name="edit_icon_margin">4dp</dimen>
+    <dimen name="edit_description_margin">0dp</dimen>
+    <dimen name="edit_vertical_button_padding">4dp</dimen>
 </resources>
