completed connections and layout polish
moved buttons, set adapters, minimized states, and changed listeners.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="logo_padding">24dp</dimen>
     <dimen name="label_padding">16dp</dimen>
     <dimen name="spinner_padding">16dp</dimen>
+    <dimen name="fragment_height">100dp</dimen>
 
     <!-- fab -->
     <dimen name="fab_press_translation_z">6dp</dimen>
@@ -24,6 +25,7 @@
     <dimen name="details_minimum_app_bar_height">250dp</dimen>
     <dimen name="details_default_container_height">250dp</dimen>
     <dimen name="details_text_margin_start">20dp</dimen>
+    <dimen name="details_fragment_height">75dp</dimen>
 
     <!-- cookbook edit fragment -->
     <dimen name="edit_button_padding">8dp</dimen>
@@ -34,4 +36,10 @@
     <dimen name="edit_icon_margin">4dp</dimen>
     <dimen name="edit_description_margin">0dp</dimen>
     <dimen name="edit_vertical_button_padding">4dp</dimen>
+    <dimen name="edit_fragment_height">150dp</dimen>
+
+
+    <!-- cookbook manual fragment -->
+    <dimen name="manual_button_padding">8dp</dimen>
+    <dimen name="manual_fragment_height">150dp</dimen>
 </resources>
