--- a/app/src/main/res/layout-v21/cookbook_details_fragment.xml
+++ b/app/src/main/res/layout-v21/cookbook_details_fragment.xml
@@ -91,7 +91,7 @@
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/share_fab"
+        android:id="@+id/edit_fab"
         android:layout_width="@dimen/fab_size"
         android:layout_height="@dimen/fab_size"
         android:layout_gravity="bottom|end"
