--- a/app/src/main/res/layout/cookbook_edit_fragment.xml
+++ b/app/src/main/res/layout/cookbook_edit_fragment.xml
@@ -46,12 +46,13 @@
         android:id="@+id/edit_reorder_ingredient_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/reorder_ingredients_button_text"
+        android:text="@string/reorder_button_text"
         android:paddingTop="@dimen/edit_vertical_button_padding"
         android:paddingBottom="@dimen/edit_vertical_button_padding"
         android:paddingStart="@dimen/edit_button_padding"
         android:paddingEnd="@dimen/edit_button_padding"
         android:layout_margin="@dimen/text_margin"
+        app:icon="@drawable/ic_reorder_24px"
         app:layout_constraintTop_toBottomOf="@id/edit_ingredient_label"
         app:layout_constraintBottom_toTopOf="@id/edit_ingredient_label"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -59,7 +60,7 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/edit_ingredient_list_container"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/edit_fragment_height"
         app:layout_constraintTop_toBottomOf="@id/edit_ingredient_label"
         tools:context="com.larsonapps.personalcookbook.IngredientFragment" />
 
@@ -67,12 +68,15 @@
         android:id="@+id/edit_add_ingredient_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_ingredient_button_text"
+        android:text="@string/add_button_text"
         android:layout_margin="@dimen/text_margin"
         android:paddingStart="@dimen/edit_button_padding"
         android:paddingEnd="@dimen/edit_button_padding"
-        app:layout_constraintTop_toBottomOf="@id/edit_ingredient_list_container"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:icon="@drawable/ic_add_24px"
+        app:layout_constraintTop_toBottomOf="@id/edit_ingredient_label"
+        app:layout_constraintBottom_toTopOf="@id/edit_ingredient_label"
+        app:layout_constraintStart_toEndOf="@id/edit_ingredient_label"
+        app:layout_constraintEnd_toStartOf="@id/edit_reorder_ingredient_button"/>
 
     <TextView
         android:id="@+id/edit_step_label"
@@ -83,17 +87,18 @@
         android:textColor="@color/white"
         android:layout_marginStart="@dimen/text_margin"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-        app:layout_constraintTop_toBottomOf="@id/edit_add_ingredient_button"
+        app:layout_constraintTop_toBottomOf="@id/edit_ingredient_list_container"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
         android:id="@+id/edit_reorder_step_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/reorder_steps_button_text"
+        android:text="@string/reorder_button_text"
         android:layout_margin="@dimen/text_margin"
         android:paddingStart="@dimen/edit_button_padding"
         android:paddingEnd="@dimen/edit_button_padding"
+        app:icon="@drawable/ic_reorder_24px"
         app:layout_constraintTop_toBottomOf="@id/edit_step_label"
         app:layout_constraintBottom_toTopOf="@id/edit_step_label"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -101,7 +106,7 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/edit_step_list_container"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/edit_fragment_height"
         tools:context="com.larsonapps.personalcookbook.StepFragment"
         app:layout_constraintTop_toBottomOf="@id/edit_step_label"
         app:layout_constraintStart_toStartOf="parent" />
@@ -110,12 +115,15 @@
         android:id="@+id/edit_add_step_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_step_button_text"
+        android:text="@string/add_button_text"
         android:layout_margin="@dimen/text_margin"
         android:paddingStart="@dimen/edit_button_padding"
         android:paddingEnd="@dimen/edit_button_padding"
-        app:layout_constraintTop_toBottomOf="@id/edit_step_list_container"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:icon="@drawable/ic_add_24px"
+        app:layout_constraintTop_toBottomOf="@id/edit_step_label"
+        app:layout_constraintBottom_toTopOf="@id/edit_step_label"
+        app:layout_constraintStart_toEndOf="@id/edit_step_label"
+        app:layout_constraintEnd_toStartOf="@id/edit_reorder_step_button"/>
 
     <TextView
         android:id="@+id/edit_image_label"
@@ -126,7 +134,7 @@
         android:textColor="@color/white"
         android:layout_marginStart="@dimen/text_margin"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-        app:layout_constraintTop_toBottomOf="@id/edit_add_step_button"
+        app:layout_constraintTop_toBottomOf="@id/edit_step_list_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/edit_image_list_container"/>
 
@@ -137,17 +145,19 @@
         tools:context="com.larsonapps.personalcookbook.ImageFragment"
         app:layout_constraintTop_toBottomOf="@id/edit_image_label"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/edit_add_image_button"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
         android:id="@+id/edit_add_image_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_image_button_text"
+        android:text="@string/add_button_text"
         android:layout_margin="@dimen/text_margin"
         android:paddingStart="@dimen/edit_button_padding"
         android:paddingEnd="@dimen/edit_button_padding"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:icon="@drawable/ic_add_24px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/edit_image_label"
+        app:layout_constraintTop_toBottomOf="@id/edit_image_label"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
