--- a/app/src/main/res/layout/cookbook_manual_fragment.xml
+++ b/app/src/main/res/layout/cookbook_manual_fragment.xml
@@ -57,20 +57,23 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/manual_ingredient_list_container"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/manual_fragment_height"
         app:layout_constraintTop_toBottomOf="@id/manual_ingredient_label"
+        app:layout_constraintBottom_toTopOf="@id/manual_step_label"
         tools:context="com.larsonapps.personalcookbook.IngredientFragment" />
 
     <Button
         android:id="@+id/manual_add_ingredient_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_ingredient_button_text"
+        android:text="@string/add_button_text"
         android:layout_margin="@dimen/text_margin"
-        android:paddingStart="@dimen/edit_button_padding"
-        android:paddingEnd="@dimen/edit_button_padding"
-        app:layout_constraintTop_toBottomOf="@id/manual_ingredient_list_container"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:paddingStart="@dimen/manual_button_padding"
+        android:paddingEnd="@dimen/manual_button_padding"
+        app:icon="@drawable/ic_add_24px"
+        app:layout_constraintTop_toBottomOf="@id/manual_ingredient_label"
+        app:layout_constraintBottom_toTopOf="@id/manual_ingredient_label"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/manual_step_label"
@@ -81,27 +84,30 @@
         android:textColor="@color/white"
         android:layout_marginStart="@dimen/text_margin"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-        app:layout_constraintTop_toBottomOf="@id/manual_add_ingredient_button"
+        app:layout_constraintTop_toBottomOf="@id/manual_ingredient_list_container"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/manual_step_list_container"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/manual_fragment_height"
         tools:context="com.larsonapps.personalcookbook.StepFragment"
         app:layout_constraintTop_toBottomOf="@id/manual_step_label"
+        app:layout_constraintBottom_toTopOf="@id/manual_image_label"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/manual_add_step_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_step_button_text"
+        android:text="@string/add_button_text"
         android:layout_margin="@dimen/text_margin"
-        android:paddingStart="@dimen/edit_button_padding"
-        android:paddingEnd="@dimen/edit_button_padding"
-        app:layout_constraintTop_toBottomOf="@id/manual_step_list_container"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:paddingStart="@dimen/manual_button_padding"
+        android:paddingEnd="@dimen/manual_button_padding"
+        app:icon="@drawable/ic_add_24px"
+        app:layout_constraintTop_toBottomOf="@id/manual_step_label"
+        app:layout_constraintBottom_toTopOf="@id/manual_step_label"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/manual_image_label"
@@ -112,27 +118,39 @@
         android:textColor="@color/white"
         android:layout_marginStart="@dimen/text_margin"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-        app:layout_constraintTop_toBottomOf="@id/manual_add_step_button"
+        app:layout_constraintTop_toBottomOf="@id/manual_step_list_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/manual_image_list_container"/>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/manual_image_list_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/manual_fragment_height"
         tools:context="com.larsonapps.personalcookbook.ImageFragment"
         app:layout_constraintTop_toBottomOf="@id/manual_image_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/manual_add_image_button"/>
+        app:layout_constraintBottom_toTopOf="@id/manual_submit_button"/>
 
     <Button
         android:id="@+id/manual_add_image_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_image_button_text"
+        android:text="@string/add_button_text"
         android:layout_margin="@dimen/text_margin"
-        android:paddingStart="@dimen/edit_button_padding"
-        android:paddingEnd="@dimen/edit_button_padding"
+        android:paddingStart="@dimen/manual_button_padding"
+        android:paddingEnd="@dimen/manual_button_padding"
+        app:icon="@drawable/ic_add_24px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/manual_image_label"
+        app:layout_constraintBottom_toTopOf="@id/manual_image_label"/>
+
+    <Button
+        android:id="@+id/manual_submit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/submit"
+        android:paddingStart="@dimen/manual_button_padding"
+        android:paddingEnd="@dimen/manual_button_padding"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
