--- a/app/src/main/res/layout/step_fragment_item.xml
+++ b/app/src/main/res/layout/step_fragment_item.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
     <TextView
@@ -20,11 +19,20 @@
         android:textColor="@color/white"/>
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/step_image_button"
+        android:id="@+id/step_edit_image_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/edit_icon_padding"
         android:layout_margin="@dimen/edit_icon_margin"
         android:background="@drawable/button_selector"
         android:src="@drawable/ic_edit_24px" />
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/step_delete_image_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/edit_icon_padding"
+        android:layout_margin="@dimen/edit_icon_margin"
+        android:background="@drawable/button_selector"
+        android:src="@drawable/ic_delete_24px" />
 </LinearLayout>
