--- a/app/src/main/res/layout/image_fragment_item.xml
+++ b/app/src/main/res/layout/image_fragment_item.xml
@@ -18,4 +18,9 @@
         android:layout_margin="@dimen/edit_delete_icon_margin"
         android:background="@drawable/button_selector"
         android:src="@drawable/ic_delete_24px" />
+
+    <CheckBox
+        android:id="@+id/image_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
