Restructured data classes to use database live data
deleted
Recipe.java
RecipeImage.java
Ingredient.java
Step.java
renamed CookbookFragment.java to RecipeFragment.java
renamed RecipeImageEntity.java to ImageEntity.java
renamed RecipeImageEntityUnitTests.java to ImageEntityUnitTests.java

--- a/app/src/main/res/layout/recipe_fragment_item_list.xml
+++ b/app/src/main/res/layout/recipe_fragment_item_list.xml
@@ -10,5 +10,5 @@
     android:layout_marginRight="16dp"
     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.CookbookFragment"
+    tools:context=".ui.RecipeFragment"
     tools:listitem="@layout/recipe_fragment_item" />
