Fixed tests for live data
CookbookDaoKeywordAndroidTests.java
CookbookDaoStepAndroidTests.java
CookbookDaoRecipeAndroidTests.java
CookbookDaoIngredientAndroidTests.java
CookbookDaoImageAndroidTests.java
added CookbookDaoCategoryAndroidTests.java for version 2 of database

--- a/app/src/main/res/layout/recipe_fragment_item.xml
+++ b/app/src/main/res/layout/recipe_fragment_item.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/item_number"
+        android:id="@+id/recipe_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
@@ -13,7 +13,15 @@
         android:textColor="@color/white"/>
 
     <TextView
-        android:id="@+id/content"
+        android:id="@+id/recipe_servings_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:textAppearance="?attr/textAppearanceListItem"
+        android:textColor="@color/white"/>
+
+    <TextView
+        android:id="@+id/recipe_total_time_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
